@startuml

title __NAVIGATION_WITH_PASSWORD's Class Diagram__\n

  namespace com.example.navigation_with_password {
    class com.example.navigation_with_password.BuildConfig {
    }
  }
  

  namespace com.example.navigation_with_password {
    class com.example.navigation_with_password.LoginActivity {
    }
  }
  

  namespace com.example.navigation_with_password {
    class com.example.navigation_with_password.NavigationActivity {
    }
  }
  

  namespace com.example.navigation_with_password {
    class com.example.navigation_with_password.WebViewActivity {
    }
  }
  

  com.example.navigation_with_password.LoginActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.navigation_with_password.NavigationActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.example.navigation_with_password.WebViewActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
